@@ -99,6 +99,19 @@
 																grow_factor = 1
 																horizontal_grow = "true"
 
+																[image]
+																	id = "victory"
+																	definition = "default"
+
+																	label = "misc/laurel.png"
+																[/image]
+
+															[/column]
+
+															[column]
+																grow_factor = 1
+																horizontal_grow = "true"
+
 																border = "right"
 																border_size = 8
 
